--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,8 @@
     color: #495057;
     text-decoration: underline;
 }
+.withdraw-edit {
+    right: 15px;
+    position: absolute;
+    top: 10px;
+}
